--- a/dev/flat_full.Rmd
+++ b/dev/flat_full.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "flat_full.Rmd for working package"
+title: "Turning a script into a package..."
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -37,7 +37,70 @@ pkgload::load_all(export_all = FALSE)
 ```
 
  
+
+This package include only one function called `odp`. The function is then made available through a shinyApp.
+
+Beyond the function, this vignette is an opportunity to demonstrate how to turn an initial script into a package as the original idea came from from this `script`: 
+
+__Why is it worth documenting your function as package?__
+
+According to [chatGPT](https://chat.openai.com/share/1d1ab05a-53e4-4643-adeb-9f64ad926bbe), Documenting R functions as packages provides several benefits:
+
+ * __Reproducibility and Maintainability__: Packages encapsulate the code, data, and documentation required to perform a specific task or provide a set of functionalities. By documenting your R functions within a package, you ensure that the code is self-contained and can be easily shared and reproduced by others. This helps maintain the integrity of your code and simplifies the process of maintaining and updating it over time.
+
+ * __Ease of Use__: Documenting your functions within a package allows you to provide clear and comprehensive documentation, including details about the function's purpose, arguments, return values, and usage examples. This makes it easier for other users (including yourself in the future) to understand how to use your functions effectively. Well-documented packages increase the discoverability and accessibility of your code, making it more likely to be adopted and utilized by others.
+
+ * __Collaboration and Community Contribution__: By creating a package with documented functions, you can encourage collaboration within the R community. Others can easily install and use your package, providing feedback, suggesting improvements, and even contributing their own enhancements or bug fixes. Documentation is crucial for enabling others to understand your codebase and contribute effectively, fostering an active and vibrant community around your package.
+
+ * __Versioning and Dependency Management__: Documenting your R functions within a package allows you to manage versioning and dependencies more effectively. Packages can specify the version requirements for other packages they rely on, ensuring that users have the correct versions installed to avoid compatibility issues. This helps maintain the reproducibility of your code across different environments and simplifies the process of managing package dependencies.
+
+ * __Integration with R Ecosystem__: Packaging your functions makes it easier to integrate them with other tools and libraries in the R ecosystem. R packages can leverage existing packages and take advantage of their functionality, creating a more cohesive and interconnected ecosystem. By documenting your functions within a package, you contribute to this ecosystem and enable seamless integration with other tools and workflows.
+
+
+Overall, documenting R functions within a package brings structure, reproducibility, ease of use, collaboration opportunities, and integration capabilities. It enhances the accessibility, maintainability, and adoption potential of your code, benefiting both yourself and the wider R community.
+
 # odp
+
+What does it take to turn a script into a documented package?
+
+ *  Install [FUSEN](https://thinkr-open.github.io/fusen/) package  
+ 
+ *  Start a project as a FUSEN   
+ 
+ * document the [0-dev_history.Rmd]() to initialize the package   
+ 
+ * during the process associate it with a github  repostory that you have created  
+ 
+ * get into the function and prefix all the function with package they comes from - while doing this document them as `@importFrom`  
+ 
+ * document the function parameters  `@param`  
+ 
+ * review the function and insert comments within the script to explain what you are doing in the script - actually chatGPT is quite effective to help you doing this  
+ 
+ * then go to the chunk examples - and document examples. Make sure you document your example and link them to practical use cases. Assumes that your target users has little knowledge of the context  
+ 
+ * then set up a few unit testing - actually chatGPT is quite effective to help you doing this  
+ 
+ * inflate your fusen markdown  with 
+   `fusen::inflate(flat_file = "dev/flat_full.Rmd", vignette_name = "Get started")`
+   
+   the objective is to get a result of ── R CMD check results as : `0 errors ✔ | 0 warnings ✔ | 0 notes ✔`
+   
+ 
+ * add a global file with the following 
+    # remotes::install_github("thinkr-open/checkhelper")
+   `checkhelper::print_globals()`
+
+
+
+ 
+ * review your readme.Rmd and inject back there your business use cases  
+ 
+ * build the companion website for the documentation with `pkgdown::build_site()`  
+ 
+ * push back everything to github  
+
+Et voila... 
 
 
 <!--
@@ -53,68 +116,113 @@ After inflating the template
 
 -  This function code will automatically be added in a new file in the "R/" directory
 -->
-    
+
 ```{r function-odp}
 #' Retrieve data from UNHCR Operational Data Portal 
 #' 
 #' 
-#' This function pulls key information from the portal
+#' This function pulls key information from the portal directly from the page -
 #' 
-#' @return
+#' It is not using the API - https://data.unhcr.org/en/api/api-registration 
+#' 
+#' @param page aka the name of the situation
+#' @param dataset one of the following: "population", "population_x_time",  
+#'                 "population_x_location",  "population_x_origin", 
+#'                  "population_x_location2",  "demographics",  "demographics" 
+#' 
+#' @return a frame with data
 #' 
 #' @references \href{https://data.unhcr.org/}{UNHCR Operational Data Portal}
+#' 
+#' @importFrom glue glue
+#' @importFrom rvest html_elements html_attr session
+#' @importFrom purrr map list_rbind modify_tree  map_chr
+#' @importFrom tibble tibble as_tibble
+#' @importFrom httr modify_url
+#' @importFrom dplyr mutate case_when filter
+#' @importFrom stringr str_detect str_match
+#' @importFrom tidyr unnest 
+#' @importFrom jsonlite fromJSON
 #' 
 #' @export
 odp <- function(page = NULL, dataset = NULL) {
   
-  
+  # Step 1: Check if the .odp environment variable exists in the global environment,
+  # and create it if it doesn't exist.
   if (is.null(.GlobalEnv$.odp))
     .GlobalEnv$.odp <- new.env(parent = emptyenv())
 
+  
+  # Step 2: Check if the sitemap exists in the .odp environment variable,
+  # and create it if it doesn't exist.
   if (is.null(.GlobalEnv$.odp$sitemap))
     .GlobalEnv$.odp$sitemap <- 
-      session(glue::glue("https://data.unhcr.org/en/site-map/")) |> 
-      html_elements("a[href*='/situations/'], 
+      rvest::session(glue::glue("https://data.unhcr.org/en/site-map/")) |> 
+      rvest::html_elements("a[href*='/situations/'], 
                      a[href*='/country/']") |> 
-      map(\(x) tibble(page_name = html_attr(x, "title"),
-                      page_url = httr::modify_url("https://data.unhcr.org/", path = html_attr(x, "href")))) |> 
-      list_rbind() |> 
-      mutate(page_type = if_else(str_detect(page_url, "/country/"), "country", "situation"),
+      purrr::map(\(x) tibble::tibble(page_name = rvest::html_attr(x, "title"),
+                      page_url = httr::modify_url("https://data.unhcr.org/",
+                                                  path = rvest::html_attr(x, "href")))) |> 
+      purrr::list_rbind() |> 
+      dplyr::mutate(page_type = dplyr::if_else(stringr::str_detect(page_url, "/country/"), 
+                                               "country",
+                                               "situation"),
              .before = page_name)
   
+  # Step 3: Return the sitemap if the page argument is NULL.
   if (is.null(page))
     return(.GlobalEnv$.odp$sitemap)
   
+  # Step 4: Check if the requested page exists in the .odp environment variable,
+  # and create it if it doesn't exist.
   if (is.null(.GlobalEnv$.odp[[page]]))
     .GlobalEnv$.odp[[page]] <- 
       .GlobalEnv$.odp$sitemap |> 
-      filter(page_name == page) |>
-      mutate(datasets = map(page_url, 
-                            \(url) session(url) |> 
-                              html_elements(xpath = "//div[a[contains(text(), 'JSON')]]") |> 
-                              (\(x) tibble(dataset_name = x |> html_text(trim = TRUE) |> (\(x) str_match(x, "(.+)\\n")[,2])(),
-                                           dataset_url = x |> html_element("a:contains('JSON')") |> html_attr("href")))() |> 
-                              filter(dataset_url != "#"))) |> 
-      unnest(datasets) |> 
-      mutate(dataset_type = map_chr(dataset_url, \(x) httr::parse_url(x)$path),
-             dataset_type = case_when(dataset_type == "population/" ~ "population",
-                                      dataset_type == "population/get/timeseries" ~ "population_x_time",
-                                      dataset_type == "population/get/sublocation" ~ "population_x_location",
-                                      dataset_type == "population/get/origin" ~ "population_x_origin",
-                                      dataset_type == "population/get/sublocation/root" ~ "population_x_location2",
-                                      dataset_type == "population/get/demography" ~ "demographics",
-                                      dataset_type == "population/get/demography/simplified" ~ "demographics"),
+      dplyr::filter(page_name == page) |>
+      dplyr::mutate(datasets = purrr::map(page_url, 
+                            \(url) rvest::session(url) |> 
+                              rvest::html_elements(xpath = "//div[a[contains(text(), \'JSON\')]]") |> 
+                              (\(x) tibble::tibble(dataset_name = x |> 
+                                             rvest::html_text(trim = TRUE) |> 
+                                             (\(x) stringr::str_match(x, "(.+)\\n")[,2])(),
+                                           dataset_url = x |> 
+                                             rvest::html_element("a:contains(\'JSON\')") |> 
+                                             rvest::html_attr("href")))() |> 
+                              dplyr::filter(dataset_url != "#"))) |> 
+      tidyr::unnest(datasets) |> 
+      dplyr::mutate(dataset_type = purrr::map_chr(dataset_url, \(x) httr::parse_url(x)$path),
+             dataset_type = dplyr::case_when(
+               dataset_type == "population/" ~ "population",
+               dataset_type == "population/get/timeseries" ~ "population_x_time",
+               dataset_type == "population/get/sublocation" ~ "population_x_location",
+               dataset_type == "population/get/origin" ~ "population_x_origin",
+               dataset_type == "population/get/sublocation/root" ~ "population_x_location2",
+               dataset_type == "population/get/demography" ~ "demographics",
+               dataset_type == "population/get/demography/simplified" ~ "demographics"),
              .before = dataset_name)
   
-  if (is.null(dataset))
+  # Step 5: Return something if dataset variable was not documented..
+  if (is.null(dataset))  
+    
     return(.GlobalEnv$.odp[[page]])
-  
-  if (is.null(.GlobalEnv$.odp[[glue::glue("{page}/{dataset}")]]))
+
+  if (is.null(.GlobalEnv$.odp[[glue::glue("{page}/{dataset}")]]))  
+  # Check if the requested page/dataset combination exists in the .odp environment variable,
+  # and create it if it doesn't exist.
+    
     .GlobalEnv$.odp[[glue::glue("{page}/{dataset}")]] <- 
-      jsonlite::fromJSON(filter(.GlobalEnv$.odp[[page]], dataset_name == dataset)$dataset_url) |> 
-      modify_tree(leaf = \(x) if (is.data.frame(x)) as_tibble(x) else x)
+      ## fixed below...jsonlite::fromJSON takes on single argument ...
+     # jsonlite::fromJSON(filter(.GlobalEnv$.odp[[page]],
+      ## Fixed below dataset_type instead of dataset_name
+      # dataset_name == dataset)$dataset_url) |> 
+      dplyr::filter(.GlobalEnv$.odp[[page]], 
+                    dataset_type == dataset)$dataset_url |>
+      purrr::map (jsonlite::fromJSON)  |> 
+      purrr::modify_tree(leaf = \(x) if (is.data.frame(x)) tibble::as_tibble(x) else x)
   
-  .GlobalEnv$.odp[[glue::glue("{page}/{dataset}")]]    
+  #  Return the dataset for the requested page/dataset combination.
+    return(.GlobalEnv$.odp[[glue::glue("{page}/{dataset}")]] ) 
+   
 }
 ```
 
@@ -137,24 +245,54 @@ After inflating the template
 ```{r example-odp}
 ## Use as
 
-## odp(): to retrieve an overview of all available country / situation pages
+## odp(): to retrieve an overview of all available situation pages
+data <- odp() |> 
+         dplyr::filter(page_type =="situation" )
 
-odp("Sudan situation") |> 
-  transmute(page_name, dataset_name, data = map2(page_name, dataset_name, compose(as_tibble, odp))) |> 
-  pull(data) |> 
-  list_rbind()
+DT::datatable(data |> dplyr::select( page_name,page_url),
+              options = list(scrollX = TRUE))
 
 ## to retrieve the datasets for a specific country /situation
-# odp(page)
+ 
+datasit <- odp(page = "Sudan situation")
+# display results.. 
+DT::datatable(datasit,
+              options = list(scrollX = TRUE))
 
 ## to retrieve a specific dataset on the given page as a parsed JSON
 # odp(page, dataset)
+page <- "Sudan situation"
+dataset <- "population"
 
+datasitpop <- odp(page = page,
+               dataset = dataset) |> 
+  ## extract the data
+  purrr::map( "data") |>
+  ## Bind together in a data frame
+  purrr::list_rbind()
 
-
-
+## plotting quickly the results... 
+library(ggplot2)
+datasitpop |>
+  ggplot() +
+  geom_col(aes(x = as.integer(individuals),
+               y = reorder( glue::glue("{population_group_name} \n as of {date}"), 
+                                        as.integer(individuals) )),
+           fill = unhcrthemes::unhcr_pal(n = 1, "pal_blue"),
+           width = 0.8) +
+  labs(title = paste0(page),
+       x = "Number of people",
+       y = "",
+       caption = "Source: https://data.unhcr.org/en/situations \n
+                   © UNHCR, The UN Refugee Agency") +
+  scale_x_continuous(expand = expansion(c(0, 0.1)),
+                     breaks = scales::pretty_breaks(n = 7),
+                     labels = scales::label_number(scale_cut = scales::cut_short_scale())) +
+  unhcrthemes::theme_unhcr(
+              font_size = 12,
+              grid = "X",
+              axis = "y")
 ```
-
 
 <!--
 Create a chunk with a test of use for your function
@@ -169,15 +307,157 @@ After inflating the template
 -  This test code will automatically be added in the "tests/testthat/" directory
 -->
 
-
-
 ```{r tests-odp}
+
 test_that("odp works", {
   expect_true(inherits(odp, "function")) 
 })
+
+# Define unit tests for odp function
+test_that("odp returns sitemap when page is NULL", {
+  sitemap <- odp()
+  expect_true(is.data.frame(sitemap))
+})
+
+test_that("odp returns specific page from sitemap", {
+  page <- "Sudan situation"
+  result <- odp(page)
+  expect_true(is.data.frame(result))
+  expect_equal(result[["page_name"]][[1]], page)
+})
+
+
+test_that("odp returns population data correctly", {
+  page <- "Sudan situation"
+  dataset <- "population"
+  result <- odp(page = page, dataset =  dataset  )
+  expect_true(is.list(result))
+})
+
+
 ```
 
+# run_app
 
+if you want to widen your package audience, make your function available through a web interface so that users can avoid rstudio desktop installation :
+
+ * create a Shiny App function called `run_app()` that will display some interactivity around your function  
+ 
+ * Set up a launcher `app.R` script at the root of the package  
+ 
+ * Use the launcher to deploy it to UNHCR rstudio server: http://rstudio.unhcr.org   
+ 
+
+    
+```{r function-run_app}
+#' run_app
+#' 
+#' 
+#' A quick shiny App to show the data the function is extracting
+#' 
+#' @import shiny
+#' @import ggplot2
+#' @importFrom unhcrthemes unhcr_pal theme_unhcr
+#' @importFrom DT DTOutput
+#' @importFrom stats reorder
+#' @importFrom glue glue
+#' @importFrom dplyr pull filter
+#' @importFrom purrr map list_rbind
+#' @importFrom scales pretty_breaks label_number cut_short_scale
+#' 
+#' @return nada
+#' 
+#' @export
+run_app <- function(){
+ui <- fluidPage(
+  h1("Retrieve Data From UNHCR Data Portal"),
+  selectInput(inputId= "liste", 
+              label = " then select a situation",
+              choices = 
+                unhcrdataportal::odp() |> 
+                dplyr::filter(page_type =="situation" ) |>
+                dplyr::pull(page_name) ),
+                
+              #  NULL ),
+  
+  actionButton("go", "Pull Data") ,
+  tabsetPanel(type = "tabs",
+              tabPanel("Plot",
+                       plotOutput(outputId ="chart"),
+                       " " ),
+              tabPanel("Table",
+                       DT::DTOutput(outputId = "table"),
+                       " ")
+              ),
+  p("source code in package :",
+    tags$a(href="https://github.com/Edouard-Legoupil/unhcrdataportal", "unhcrdataportal") )
+    
+)
+
+server <- function(input, output, session) {
+  ## create a reactive value to store what we have 
+  reactiveObject <- reactiveValues(
+    data = NULL,
+    plot = NULL  )
+  observeEvent(eventExpr = input$go, {
+    data <- odp(page = as.character(input$liste),
+                dataset = "population") |>
+      ## extract the data
+      purrr::map( "data") |>
+      ## Bind together in a data frame
+      purrr::list_rbind() 
+    reactiveObject$data  <- data
+    
+    plot <- data |>
+      ggplot() +
+      geom_col(aes(x = as.integer(individuals),
+                   y = stats::reorder( glue::glue("{population_group_name} \n as of {date}"),
+                                       as.integer(individuals) )),
+               fill = unhcrthemes::unhcr_pal(n = 1, "pal_blue"),
+               width = 0.8) +
+      labs(title = paste0(as.character(input$liste)),
+           x = "Number of people",
+           y = "",
+           caption = "Source: UNHCR Data Portal: https://data.unhcr.org/en/situations \n\u00a9 UNHCR, The UN Refugee Agency") +
+      scale_x_continuous(expand = expansion(c(0, 0.1)),
+                         breaks = scales::pretty_breaks(n = 7),
+                         labels = scales::label_number(scale_cut = scales::cut_short_scale())) +
+      unhcrthemes::theme_unhcr( font_size = 22, grid = "X",  axis = "y")
+    
+    reactiveObject$plot  <- plot
+    
+    ## console output in case..
+    # cat(file=stderr(), 
+    #     " List sit", 
+    #     allsit ,"\n")
+    
+  })
+  ## generate the plot
+  output$chart <- renderPlot({
+       reactiveObject$plot
+    })
+  ## generate the table
+  output$table <- DT::renderDT({
+           reactiveObject$data
+    })
+}
+
+shinyApp(ui, server)
+}
+```
+  
+```{r example-run_app}
+
+## Run the shiny App 
+# run_app()
+```
+  
+```{r tests-run_app}
+test_that("run_app works", {
+  expect_true(inherits(run_app, "function")) 
+})
+```
+  
 
 <!--
 # Inflate your package
